--- a/src/style.scss
+++ b/src/style.scss
@@ -72,3 +72,115 @@
     }
   }
 }
+
+
+.home {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .container {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
+    display: flex;
+    overflow: hidden;
+
+    .sidebar {
+      flex: 1;
+      border-right: 1px solid #3e3c61;
+      background-color: #3e3c61;
+      .navbar {
+        display: flex;
+        align-items: center;
+        background-color: #2f2d52;
+        height: 50px;
+        padding: 10px 15px;
+        justify-content: space-between;
+        color: #ddddf7;
+
+        .logo {
+          font-weight: bold;
+        }
+
+        .user {
+          display: flex;
+          gap: 10px;
+
+          img {
+            background-color: #ddddf7;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+
+          button {
+            background-color: #5d5d8d;
+            color: #ddddf7;
+            font-size: 10px;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 5px ;
+          }
+        }
+      }
+      .search {
+        border-bottom: 1px solid gray;
+        .searchForm {
+          padding: 10px;
+
+          input {
+            background-color: transparent;
+            border: none;
+            color: white;
+            outline: none;
+            &::placeholder {
+              color: lightgrey;
+            }
+          }
+
+        }
+      }
+
+      .userChat {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        cursor: pointer;
+        &:hover {
+          background-color: #2f2d52
+        }
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        .userChatInfo {
+          span {
+            font-size: 18px;
+            font-weight: 500;
+          }
+          p {
+            font-size: 14px;
+            color: lightgrey;
+          }
+        }
+      }
+    }
+
+    .chat {
+      flex: 2;
+    }
+  }
+
+}
